// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CrowdfundingCard /> by default matches with snapshot 1`] = `
<div
  data-radium={true}
>
  <div
    className="k-Card k-Card--light k-Card--withoutBoxShadowOnHover"
    data-radium={true}
    href={null}
    onClick={[Function]}
    style={
      Object {
        "paddingBottom": "5px",
        "position": "relative",
      }
    }
  >
    <div
      className="k-Card__imageContainer marger__StyledMarger-q3lecu-0 dRjxbN"
    >
      <img
        alt=""
        className="k-Card__image"
        data-radium={true}
        src="https://placehold.it/350x200/caf4fe/caf4fe"
        style={
          Object {
            "color": undefined,
            "display": "block",
            "position": "absolute",
            "textAlign": "center",
            "top": 0,
            "width": "100%",
          }
        }
      />
    </div>
    <div
      data-radium={true}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#fff",
          "display": "inline-flex",
          "marginTop": "-30px",
          "position": "relative",
          "top": "0",
        }
      }
    >
      <div
        className="marger__StyledMarger-q3lecu-0 hAgZUM"
      >
        <span
          className="k-ButtonImage k-ButtonImage--withoutPointerEvents"
          style={
            Object {
              "backgroundColor": "#d8d8d8",
              "marginLeft": "10px",
            }
          }
          tabIndex={null}
        >
          <img
            alt=""
            className="k-ButtonImage__img"
            src="https://placehold.it/100x100/caf4fe/caf4fe"
          />
        </span>
      </div>
      <div
        data-radium={true}
        style={
          Object {
            "lineHeight": "1.2",
            "marginLeft": "10px",
            "marginRight": "20px",
          }
        }
      >
        <div
          className="k-u-size-micro k-u-weight-regular"
          data-radium={true}
          style={Object {}}
        />
        <div
          className="k-u-size-micro k-u-weight-light"
          data-radium={true}
          style={Object {}}
        />
      </div>
    </div>
    <div
      className="marger__StyledMarger-q3lecu-0 hnyYlw"
    >
      <div
        className="marger__StyledMarger-q3lecu-0 kmLYBJ"
      >
        <p
          className="k-Title k-Card__title k-Title--senary k-Title--withoutMargin"
          data-radium={true}
        >
          <span
            style={
              Object {
                "whiteSpace": "nowrap",
              }
            }
            width={0}
          >
            <span />
            <span />
            <span
              style={
                Object {
                  "left": 0,
                  "position": "fixed",
                  "top": 0,
                  "visibility": "hidden",
                }
              }
            >
              …
            </span>
          </span>
        </p>
      </div>
      <div
        className="marger__StyledMarger-q3lecu-0 deRNwX"
      >
        <span
          className="horizontal-stroke__StyledHorizontalStroke-sc-15k7x5m-0 cpsTLp"
        />
      </div>
    </div>
  </div>
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": "",
      }
    }
  />
</div>
`;

exports[`<CrowdfundingCard /> with loading prop matches with snapshot 1`] = `
<div
  data-radium={true}
>
  <div
    className="k-Card k-Card--light k-Card--withoutBoxShadowOnHover"
    data-radium={true}
    href={null}
    onClick={[Function]}
    style={
      Object {
        "paddingBottom": "5px",
        "position": "relative",
      }
    }
  >
    <div
      className="k-Card__imageContainer marger__StyledMarger-q3lecu-0 dRjxbN"
    />
    <div
      data-radium={true}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#fff",
          "display": "inline-flex",
          "marginTop": "-30px",
          "position": "relative",
          "top": "0",
        }
      }
    >
      <div
        className="marger__StyledMarger-q3lecu-0 hAgZUM"
      >
        <span
          className="k-ButtonImage k-ButtonImage--withoutPointerEvents"
          style={
            Object {
              "backgroundColor": "#d8d8d8",
              "marginLeft": "10px",
            }
          }
          tabIndex={null}
        >
          <img
            alt=""
            className="k-ButtonImage__img"
          />
        </span>
      </div>
      <div
        data-radium={true}
        style={
          Object {
            "lineHeight": "1.2",
            "marginLeft": "10px",
            "marginRight": "20px",
          }
        }
      >
        <div
          className="k-u-size-micro k-u-weight-regular"
          data-radium={true}
          style={
            Object {
              "backgroundColor": "#d8d8d8",
              "borderBottom": "1px solid #fff",
              "height": "14px",
              "width": "70px",
            }
          }
        />
        <div
          className="k-u-size-micro k-u-weight-light"
          data-radium={true}
          style={
            Object {
              "backgroundColor": "#d8d8d8",
              "borderTop": "1px solid #fff",
              "height": "14px",
              "width": "100px",
            }
          }
        />
      </div>
    </div>
    <div
      className="marger__StyledMarger-q3lecu-0 hnyYlw"
    >
      <div
        className="marger__StyledMarger-q3lecu-0 kmLYBJ"
      >
        <div
          data-radium={true}
        >
          <span
            data-radium={true}
            style={
              Object {
                "backgroundColor": "#d8d8d8",
                "borderBottom": "1px solid #fff",
                "display": "block",
                "height": "24px",
              }
            }
          />
          <span
            data-radium={true}
            style={
              Object {
                "backgroundColor": "#d8d8d8",
                "borderBottom": 0,
                "borderTop": "1px solid #fff",
                "display": "block",
                "height": "24px",
                "width": "70%",
              }
            }
          />
        </div>
      </div>
      <div
        className="marger__StyledMarger-q3lecu-0 deRNwX"
      >
        <span
          className="horizontal-stroke__StyledHorizontalStroke-sc-15k7x5m-0 fskJgg"
        />
        <span
          data-radium={true}
          style={
            Object {
              "backgroundColor": "#d8d8d8",
              "display": "block",
              "height": "12px",
              "width": "80px",
            }
          }
        />
      </div>
    </div>
    <span
      data-radium={true}
      style={
        Object {
          "animation": "x 1s linear infinite",
          "animationName": "radium-animation-d7bd9a33",
          "background": "linear-gradient(90deg, rgba(0, 0, 0, 0),       rgba(255, 255, 255, .3), rgba(0, 0, 0, 0))",
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
          "transform": "translateX(-100%)",
        }
      }
    />
  </div>
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": "@keyframes radium-animation-d7bd9a33 {
0%{transform: translateX(-100%);}
100%{transform: translateX(100%);}
}
",
      }
    }
  />
</div>
`;

exports[`<CrowdfundingCard /> with some props matches with snapshot 1`] = `
<div
  data-radium={true}
>
  <a
    className="k-Card k-Card--light k-Card--withoutBoxShadowOnHover"
    data-radium={true}
    href="#foobar"
    onClick={[Function]}
    style={
      Object {
        "paddingBottom": "5px",
        "position": "relative",
      }
    }
  >
    <div
      className="k-Card__imageContainer marger__StyledMarger-q3lecu-0 dRjxbN"
    >
      <img
        alt="Image alt"
        className="k-Card__image"
        data-radium={true}
        src="#image"
        style={
          Object {
            "color": "#333",
            "display": "block",
            "position": "absolute",
            "textAlign": "center",
            "top": 0,
            "width": "100%",
          }
        }
      />
    </div>
    <div
      data-radium={true}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#fff",
          "display": "inline-flex",
          "marginTop": "-30px",
          "position": "relative",
          "top": "0",
        }
      }
    >
      <div
        className="marger__StyledMarger-q3lecu-0 hAgZUM"
      >
        <span
          className="k-ButtonImage k-ButtonImage--withoutPointerEvents"
          style={
            Object {
              "backgroundColor": "#d8d8d8",
              "marginLeft": "10px",
            }
          }
          tabIndex={null}
        >
          <img
            alt="Avatar alt"
            className="k-ButtonImage__img"
            src="#avatar"
          />
        </span>
      </div>
      <div
        data-radium={true}
        style={
          Object {
            "lineHeight": "1.2",
            "marginLeft": "10px",
            "marginRight": "20px",
          }
        }
      >
        <div
          className="k-u-size-micro k-u-weight-regular"
          data-radium={true}
          style={Object {}}
        >
          Custom title
        </div>
        <div
          className="k-u-size-micro k-u-weight-light"
          data-radium={true}
          style={Object {}}
        >
          Custom description
        </div>
      </div>
    </div>
    <div
      className="marger__StyledMarger-q3lecu-0 hnyYlw"
    >
      <div
        className="marger__StyledMarger-q3lecu-0 kmLYBJ"
      >
        <h4
          className="k-Title k-Card__title k-Title--senary k-Title--withoutMargin"
          data-radium={true}
        >
          <span
            style={
              Object {
                "whiteSpace": "nowrap",
              }
            }
            width={0}
          >
            <span />
            <span>
              Custom title
            </span>
            <span
              style={
                Object {
                  "left": 0,
                  "position": "fixed",
                  "top": 0,
                  "visibility": "hidden",
                }
              }
            >
              …
            </span>
          </span>
        </h4>
      </div>
      <div
        className="marger__StyledMarger-q3lecu-0 deRNwX"
      >
        <span
          className="horizontal-stroke__StyledHorizontalStroke-sc-15k7x5m-0 cpsTLp"
        />
        <p
          className="k-u-size-micro k-u-weight-regular"
          data-radium={true}
          style={
            Object {
              "flex": 1,
              "lineHeight": "1rem",
              "overflow": "hidden",
              "whiteSpace": "nowrap",
            }
          }
        >
          <span
            style={
              Object {
                "whiteSpace": "nowrap",
              }
            }
            width={0}
          >
            <span />
            <span>
              Custom subtitle
            </span>
            <span
              style={
                Object {
                  "left": 0,
                  "position": "fixed",
                  "top": 0,
                  "visibility": "hidden",
                }
              }
            >
              …
            </span>
          </span>
        </p>
      </div>
    </div>
    <div
      className="marger__StyledMarger-q3lecu-0 mydCP"
    >
      <div
        className="marger__StyledMarger-q3lecu-0 fWATHV"
      >
        <span
          className="k-u-line-height-normal k-u-size-micro k-u-weight-light"
        >
          Custom information #1
        </span>
      </div>
      <div
        className="marger__StyledMarger-q3lecu-0 fWATHV"
      >
        <span
          className="k-u-line-height-normal k-u-size-micro k-u-weight-light"
        >
          Custom information #2
        </span>
      </div>
      <div
        className="marger__StyledMarger-q3lecu-0 gCcsYs"
      >
        <span
          className="k-u-line-height-normal k-u-size-micro k-u-weight-light"
        >
          Custom information #3
        </span>
      </div>
    </div>
    <div
      className="marger__StyledMarger-q3lecu-0 kRUQlB"
    >
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="84"
        className="k-Progress"
        role="progressbar"
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <div
          className="k-Progress__ramp"
          style={
            Object {
              "height": "4px",
            }
          }
        >
          <div
            className="k-Progress__slider"
            style={
              Object {
                "backgroundColor": "null",
                "width": "84%",
              }
            }
          />
        </div>
      </div>
      <span
        className="k-u-size-micro k-u-weight-regular"
        data-radium={true}
        style={
          Object {
            "flexShrink": 0,
            "marginLeft": "20px",
          }
        }
      >
        84 %
      </span>
    </div>
    <div
      data-radium={true}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#fff",
          "display": "inline-flex",
          "lineHeight": "1",
          "padding": "10px",
          "position": "absolute",
          "right": "0",
          "top": "0",
        }
      }
    >
      <span
        className="k-u-line-height-normal k-u-size-micro k-u-weight-regular"
      >
        Custom state
      </span>
    </div>
  </a>
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": "",
      }
    }
  />
</div>
`;
